common/src/main/java/com/example/common/error/Errors.kt
package com.example.common.error

object ErrorCode {
    const val ERROR_HAPPENED = 1000
    const val ERROR_TIMEOUT = 1001
    const val ERROR_IO = 1002
}

object ErrorMessage {
    const val ERROR_HAPPENED_MESSAGE = "ERROR HAPPENED"
    const val ERROR_TIMEOUT_MESSAGE = "ERROR TIMEOUT"
    const val ERROR_IO_MESSAGE = "ERROR IO"
    const val ERROR_NO_NET = "ERROR NO NET"
}